--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "stripe": "^8.203.0"
   },
   "engines": {
-    "node": "0.10.41",
-    "npm": "1.4.29"
+    "node": "16.10.0",
+    "npm": ">=6.0.0"
   },
   "rewrites": [
     {
