--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "license": "ISC",
   "dependencies": {
     "@paypal/checkout-server-sdk": "^1.0.3",
+    "apicache": "^1.6.3",
     "axios": "^0.26.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^11.0.0",
-    "express": "^4.17.2",
+    "express": "^4.19.2",
     "express-fileupload": "^1.2.1",
     "firebase-admin": "^10.0.2",
     "mongodb": "^4.3.0",
@@ -33,7 +35,6 @@
       "destination": "/api/404.js"
     }
   ],
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Mridul-web-me/MagpyeHub-Server2.git"
